--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,68 @@
-.App {
+.red {
+  color: #FF0000;
+}
+.none {
+  display: none;
+}
+body {
+  background: rgba(0, 102, 255, 0.38);
+  font-family: sans-serif;
+}
+p {
+  margin: 0 0 5px;
+}
+h3 {
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+#root {
+  width: 600px;
+  margin: 0 auto;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.news {
+  width: 100%;
 }
-
-.App-link {
-  color: #61dafb;
+.article {
+  background-color: #FFF;
+  border: 1px solid rgba(0, 89, 181, 0.82);
+  width: 100%;
+  box-shadow: 2px 2px 5px -1px rgb(0, 81, 202);
+  padding: 3px 5px;
+  margin: 0 0 5px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.news__author {
+  text-decoration: underline;
+  color: #007DDC;
+}
+.news__count {
+  margin: 10px 0 0 0;
+  display: block;
+}
+.add {
+  margin: 0 5px 5px 0;
+  width: 100%;
+  border: 1px dashed rgba(0, 89, 181, 0.82);
+  padding: 5px;
+}
+.add__author, .add__text, .add__checkrule {
+  width: 94%;
+}
+.add__author, .add__text, .add__btn, .add__checkrule {
+  display: block;
+  margin: 0 0 5px 0;
+  padding: 5px;
+  border: 1px solid rgba(0, 89, 181, 0.82);
+}
+.add__checkrule {
+  border: none;
+  font-size: 12px;
+}
+.add__btn {
+  box-sizing: content-box;
+  color: #FFF;
+  text-transform: uppercase;
+  background: #007DDC;
+}
+.add__btn:disabled {
+  background: #CCC;
+  color: #999;
 }
